feat: Add initial Flutter app structure with Firebase authentication, local auth, and UI for login, register, and onboarding.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,4 +46,6 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 </dict>
+<key>NSFaceIDUsageDescription</key>
+<string>Şifrelerinize erişmek için FaceID kullanmanız gerekmektedir.</string>
 </plist>
