--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^4.3.0
   firebase_auth: ^6.1.3
+  shared_preferences: ^2.5.4
+  cloud_firestore: ^6.1.1
+  local_auth: 2.3.0
 
 dev_dependencies:
   flutter_test:
