--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,11 @@ dependencies:
   shared_preferences: ^2.5.4
   cloud_firestore: ^6.1.1
   local_auth: 2.3.0
-
+  pdf: ^3.10.7
+  path_provider: ^2.1.5
+  share_plus: ^12.0.1
+path_provider: ^2.1.1
+share_plus: ^7.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
