--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,9 @@ dependencies:
   pdf: ^3.10.7
   path_provider: ^2.1.5
   share_plus: ^12.0.1
-path_provider: ^2.1.1
-share_plus: ^7.2.1
+  encrypt: ^5.0.3
+  crypto: ^3.0.3
+  flutter_snake_navigationbar: 0.6.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -60,16 +61,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
