--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,7 +49,7 @@ dependencies:
   crypto: ^3.0.3
   flutter_snake_navigationbar: 0.6.1
   provider: ^6.1.5+1
-  flutter_windowmanager: ^0.2.0
+  flutter_gen: ^5.12.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,6 +66,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
   uses-material-design: true
   assets:
     - assets/logo.png
